gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: dubbo
spec:
  selector:
    app: dubbo
    mspider.io/mesh-gateway-name: dubbo
  servers:
    - hosts:
        - '*'
      port:
        name: http
        number: 8080
        protocol: HTTP
