consumer.yaml
---
kind: Rollout
apiVersion: argoproj.io/v1alpha1
metadata:
  name: dubbo3-consumer-v1
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dubbo3-consumer
  template:
    metadata:
      labels:
        app: dubbo3-consumer
        sidecar.istio.io/inject: "true"
        version: v1
    spec:
      containers:
        - name: container-1
          image: release-ci.daocloud.io/mspider/spring-dubbo3-consumer:v0.2
          resources:
            limits:
              cpu: 250m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 512Mi
  strategy:
    canary:
      trafficRouting:
        istio:
          virtualService:
            name: consumer
            routes:
              - test-v1
          destinationRule:
            name: dubbo-consumer
            stableSubsetName: stable
            canarySubsetName: canary
      steps:
        - setWeight: 5
        - pause:
            duration: 10m
        - setWeight: 50
        - pause:
            duration: 10m
---
kind: Service
apiVersion: v1
metadata:
  name: dubbo3-consumer
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  ports:
    - name: http
      protocol: TCP
      port: 9090
      targetPort: 8080
  selector:
    app: dubbo3-consumer
  type: ClusterIP

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dubbo-consumer
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  host: dubbo3-consumer
  subsets:
    - labels:
        app: dubbo3-consumer
      name: canary
    - labels:
        app: dubbo3-consumer
      name: stable
  trafficPolicy:
    connectionPool:
      http:
        maxRetries: 3

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: consumer
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  gateways:
    - dubbo
  hosts:
    - "*"
  http:
    - name: test-v1
      headers:
        request:
          add:
            lane: test-v1
      match:
        - queryParams:
            name:
              exact: test-v1
      route:
        - destination:
            host: dubbo3-consumer
            port:
              number: 9090
            subset: stable
          weight: 100
        - destination:
            host: dubbo3-consumer
            port:
              number: 9090
            subset: canary
          weight: 0
    - route:
        - destination:
            host: dubbo3-consumer
            port:
              number: 9090
            subset: stable
